cmake: Improve error message if CMAKE_BINARY_DIR not writable

Fixes: #24407